toolchain/internal/core/analysis/testdata/errors/structure/multiple_output_blocks.vdl
// @expect: E702

rpc Users {
  proc GetUser {
    input {
      id: string
    }

    output {
      user: string
    }

    output {
      status: string
    }
  }
}
